--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy": "https://noted-app-api.herokuapp.com",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -12,9 +13,7 @@
     "@tanstack/react-query": "^4.2.3",
     "@tanstack/react-query-devtools": "^4.2.3",
     "axios": "^0.27.2",
-    "dayjs": "^1.11.5",
     "formik": "^2.2.9",
-    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
